<resources>
    <string name="app_name">Order Coffee</string>
    <string name="order_summary">Order summary</string>
    <string name="order">Order</string>
    <string name="plusButton" translatable="false">+</string>
    <string name="minusButton" translatable="false">-</string>
    <string name="quantity">Quantity</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="toppings">Toppings</string>
    <string name="_0" translatable="false">1</string>
    <string name="initPrice" translatable="false">$0.00</string>
    <string name="chocolate">Chocolate</string>
    <string name="thank_you">Thank you</string>
    <string name="name">name</string>
    <string name="total">Total</string>
</resources>